# onnxruntime-ep-telum

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  pyproject.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/branch-protection/: main.json
.github/workflows/: pr-ci.yml  release-nuget.yml  release-pypi.yml
docs/: INSTALL.md  USER_GUIDE.md
packaging/nuget/: onnxruntime-ep-telum.nuspec
packaging/nuget/src/OnnxRuntimeEpTelum/: PluginEpHelpers.cs
python/onnxruntime_ep_telum/: __init__.py
reports/parity/: README.md  environment_manifest.md  operator_coverage.md  parity_matrix.md
src/telum_plugin_ep/: ep.cc  ep.h  ep_custom_op.h  ep_data_transfer.cc  ep_data_transfer.h  ep_external_resource_importer.cc  ep_external_resource_importer.h  ep_factory.cc  ep_factory.h  ep_stream_support.h  telum_backend.cc  telum_backend.h  telum_capability_policy.cc  telum_capability_policy.h  telum_compatibility_info.cc  telum_compatibility_info.h  telum_ep_context_cache.cc  telum_ep_context_cache.h  telum_plugin_ep.cc  telum_plugin_ep.def  telum_profile.cc  telum_profile.h
src/telum_plugin_ep/kernels/: op_kernel.cc  op_kernel.h
tests/: README.md  run_parity_suite.sh
tools/validation/: OP_COVERAGE_TESTS.md  generate_op_coverage_models.py  op_coverage_matrix.psv  run_functional_suite.sh  run_op_coverage_suite.sh  run_perf_suite.sh
